--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -4,4 +4,5 @@ footer {
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2), 0px -10px 10px 0 rgba(0, 0, 0, .19);
     width: 100%;
     bottom: 0;
+    position: absolute;
 }
