--- a/public/styles/reset.css
+++ b/public/styles/reset.css
@@ -12,15 +12,16 @@ body {
 
 h3 {
     font-size: 1.5rem;
+    margin: 15px 0 7px;
 }
 
 h4 {
-    font-size: 1.4rem;
-    margin: 10px 0;
+    font-size: 1.3rem;
+    margin: 10px 0 8px;
 }
 
 h5 {
-    font-size: 1.25rem;
+    font-size: 1.15rem;
     margin: 10px 0;
 }
 p {
