--- a/src/views/faq/Faq.module.css
+++ b/src/views/faq/Faq.module.css
@@ -1,3 +1,57 @@
-.tab_content {
+.container {
+	padding: 20px 30px 50px;
+	background-color: white;
+	width: 80%;
+	min-height: 84vh;
+	margin: 0 auto;
+}
 
+.tab_link {
+	background-color: #555;
+	color: white;
+	float: left;
+	border: none;
+	outline: none;
+	cursor: pointer;
+	padding: 14px 16px;
+	font-size: 17px;
+	width: 20%;
+}
+
+.tab_link:hover {
+	background-color: #777;
+}
+
+.tab_content {
+	color: white;
+	display: none;
+	padding: 50px;
+	text-align: center;
+	margin: 0 auto;
+	justify-content: center;
+	align-items: center;
+}
+
+.content {
+	padding: 10px 12px;
+	border: 1px solid #ccc;
+	height: 100%;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+@media screen and (max-width: 800px) {
+	.content {
+		flex-direction: column;
+		align-items: center;
+		flex-wrap: nowrap;
+	}
+}
+@media only screen and(max-width: 767px) {
+	.tab_link {
+		display: block;
+		float: none;
+		width: 100%;
+	}
+	
 }
