--- a/src/views/Github/Github.module.css
+++ b/src/views/Github/Github.module.css
@@ -1,8 +1,47 @@
 .container {
+	padding:	20px 30px 50px;
+	background-color: white;
+	width: 80%;
+	margin: 0 auto;
 	display: flex;
 }
-
+ 
 .avatar {
-	width: 30%;
-	height: 30%;
+	width: 300px;
+	height: 300px;
+}
+
+/* Big Tablet to 1200px (width smaller than 1140px row */
+@media only screen and (max-width: 1200px) {
+	.avatar {
+		width: 300px;
+		height: 300px;
+	}
+}
+ 
+/* Small Tablet to Big Tablet from 768 to 1023px */
+@media only screen and (max-width: 1023px) {
+	.avatar {
+		width: 300px;
+		height: 300px;
+	}
+
+}
+ 
+/* Small Phones to small Tablet 481-767px(Ipad) */
+@media only screen and (max-width: 767px) {
+	.avatar {
+		width: 300px;
+		height: 300px;
+	}
+
+}
+ 
+/* Small Phones 0 to 480px(Iphone) */
+@media only screen and (max-width: 480px) {
+	.avatar {
+		width: 300px;
+		height: 300px;
+	}
+
 }
